# rd-cdm

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  create_and_validate_json.yml  pages.yml  validate_schema.yml
_build/html/: .buildinfo  changelog.html  contributing.html  genindex.html  index.html  license.html  objects.inv  search.html  searchindex.js
_build/html/.doctrees/: changelog.doctree  contributing.doctree  index.doctree  license.doctree
_build/html/.doctrees/background/: background_file.doctree
_build/html/.doctrees/resources/: resources_file.doctree
_build/html/.doctrees/usage/: usage_file.doctree
_build/html/_sources/: changelog.rst.txt  contributing.rst.txt  index.rst.txt
_build/html/_sources/background/: background_file.rst.txt
_build/html/_sources/resources/: resources_file.rst.txt
_build/html/_sources/usage/: usage_file.rst.txt
_build/html/_static/v2_0_0_dev0/: RD CDM v2.0.0.dev0.xlsx  rd_cdm_data_elements_v2_0_0_dev0.json
_build/html/background/: background_file.html
_build/html/resources/: resources_file.html
_build/html/usage/: usage_file.html
_build/html/v2_0_0_dev0/: rd_cdm_data_elements_v2_0_0_dev0.csv  rd_cdm_value_sets_v2_0_0_dev0.csv
docs/: Makefile  changelog.rst  conf.py  contributing.rst  index.rst  license.rst  requirements.txt
docs/_static/v2_0_0/: RD-CDM v2.0.0.xlsx
docs/_static/v2_0_0_dev0/: RD CDM v2.0.0.xlsx  rd_cdm_v2_0_0_dev0.csv  rd_cdm_v2_0_0_dev0.xlsx
docs/background/: background_file.rst
docs/resources/: resources_file.rst  resourscs_file.rst
docs/usage/: usage_file.rst
res/: __init__.py  create_codesystems_json.py  josn_transformer.ipynb  rd_cdm_v2.0.json  test.json
res/rd_cdm_v2_0_0/: Copy of RD CDM v2.0.xlsx  RD CDM v2.0 (1).xlsx  rd_cdm_template.json  rd_cdm_v2.0.json
res/v2.0.0/: create_codesystems_json.py  rd_cdm_codesystems_v2.0.0.json  rd_cdm_schema_v2.0.0.json
res/v2_0_0/: __init__.py  create_codesystems_json.py  rd_cdm_codesystems_v2_0_0.csv  rd_cdm_codesystems_v2_0_0.json  rd_cdm_data_elements_v2.0.0.json  rd_cdm_data_elements_v2_0_0.json  rd_cdm_schema_v2.0.0.json  rd_cdm_v2_0_0.json  rd_cdm_v2_0_0_schema.json  rd_cdm_value_sets_v2.0.0.json  rd_cdm_value_sets_v2_0_0.csv  rd_cdm_value_sets_v2_0_0.json
res/v2_0_0_dev0/: rd_cdm_codesystems_v2_0_0_dev0.json  rd_cdm_v2_0_0_dev0.json  rd_cdm_value_sets_v2_0_0_dev0.csv  rd_cdm_value_sets_v2_0_0_dev0.json
schemas/: rd_cdm_code_systems_schema.json  rd_cdm_data_elements_schema.json  rd_cdm_v2_0_0_schema.json  rd_cdm_value_sets_schema.json
scripts/: gen_pydantic.py  merge_instances.py
src/data_model/: __init__.py  base_types.py  code.py  codesystems.py  data_elements.py  value_set.py  value_sets.py
src/parsing/: __init__.py  create_codesystems_json.py  create_data_elements_json.py  create_rd_cdm_csv.py  create_rd_cdm_json.py  create_value_sets_json.py
src/rd_cdm/: validation.py
src/rd_cdm/data_model/: __init__.py  base_types.py  data_elements.py  utils.py
src/rd_cdm/instances/v2_0_0/: code_systems.yaml  data_elements.yaml  rd_cdm_full.yaml  value_sets.yaml
src/rd_cdm/instances/v2_0_1/: rd_cdm_full.yaml  value_sets.yaml
src/rd_cdm/instances/v2_0_1/csvs/: data_elements.csv  rd_cdm_v2_0_1.csv
src/rd_cdm/instances/v2_0_1/jsons/: data_elements.json  rd_cdm_v2_0_1.json
src/rd_cdm/jsons/v2_0_1/: rd_cdm_full.json  value_sets.json
src/rd_cdm/parsing/: __init__.py  create_codesystems_json.py  create_value_sets_json.py
src/rd_cdm/python_classes/: rd_cdm.py  rd_cdm_pydantic.py
src/rd_cdm/schema/: rd_cdm.yaml
src/rd_cdm/utils/: config.py  gen_pydantic.py  json_parsing.py  merge_instances.py
src/rd_cdm/v2_0_0/: rd_cdm_v2_0_0_codesystems_versions.py  rd_cdm_v2_0_0_data_elements.py
src/v2_0_0/: __init__.py  rd_cdm_v2_0_0_codesystems_versions.py  rd_cdm_v2_0_0_data_elements.py  rd_cdm_v2_0_0_value_sets.py
src/v2_0_0_dev0/: __init__.py  rd_cdm_v2_0_0_dev0_codesystems_versions.py  rd_cdm_v2_0_0_dev0_data_elements.py  rd_cdm_v2_0_0_dev0_value_sets.py
tests/: __init__.py  v2.0.0_test.py  v2_0_0_test.py
tests/parsing/: test_create_codesystems_json.py  test_create_data_elements_json.py  test_create_rd_cdm_csv.py  test_create_rd_cdm_json.py  test_create_value_sets_json.py  test_validate_json_schema.py
tests/res_tests/v2.0.0_tests/: rd_cdm_codesystems_v2.0.0_test.py
tests/v2/: __init__.py  v2_0_0_test.py
