[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "template_for_python_projects"
authors = [
    {name = "Filip Rehburg", email="filip.rehburg@charite.de"},
    {name = "Adam SL Graefe", email="adam.graefe@charite.de"},
]
description = "TODO"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "Test",
    "TODO",
    "ETC",
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Machine Learning"
]
dependencies = [
    "numpy",
]
version = "0.1.0"  # Explicit version added to avoid dynamic version lookup issues

[project.optional-dependencies]
test = ["pytest>=7.0.0,<8.0.0"]
docs = ["sphinx>=7.0.0", "sphinx-rtd-theme>=1.3.0", "sphinx-copybutton>=0.5.0"]

[project.urls]
homepage = "https://github.com/frehburg/template_for_python_projects"
repository = "https://github.com/frehburg/template_for_python_projects.git"
documentation = "https://frehburg.github.io/template_for_python_projects/stable"
bugtracker = "https://github.com/frehburg/template_for_python_projects/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]  # Ensure that the packages in 'src' directory are discovered properly

[project.scripts]
sample = "sample:main"  # If you have a CLI script, otherwise this section can be removed
