[project]
name = "template_for_python_projects"
authors = [
    {name = "Adam SL Graefe", email="adam.graefe@charite.de"},
    {name = "Filip Rehburg", email="filip.rehburg@charite.de"},
    {name = "Daniel Danis", email="daniel.danis@bih-charite.de"},
    {name = "Peter N Robinson", email="peter.robinson@bih-charite.de"},
    {name = "Sylvia Thun", email="sylvia.thun@bih-charite.de"},
]
description = "An ontology-based Rare Disease Common Data Model (RD CDM) to enable international registry use, HL7 FHIR, and GA4GH Phenopackets."
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "Rare Diseases",
    "Ontology",
    "GA4GH Phenopacket Schema",
    "HL7 FHIR",
    "Inernational Patient Summary",
    
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Machine Learning"
]
dependencies = [
    "numpy",
    "jsonschema",  # Added jsonschema to dependencies
]
version = "0.1.0"

[project.optional-dependencies]
test = ["pytest>=7.0.0,<8.0.0"]
docs = ["sphinx>=7.0.0", "sphinx-rtd-theme>=1.3.0", "sphinx-copybutton>=0.5.0"]

[project.urls]
homepage = "https://github.com/BIH-CEI/rd-cdm"
repository = "https://github.com/BIH-CEI/rd-cdm"
documentation = "https://rd-cdm.readthedocs.io/en/latest/"
bugtracker = "https://github.com/BIH-CEI/rd-cdm/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
