[project]
name = "rd-cdm"
authors = [
    {name = "Adam SL Graefe", email="adam.graefe@charite.de"},
    {name = "Filip Rehburg", email="filip.rehburg@charite.de"},
    {name = "Daniel Danis", email="daniel.danis@bih-charite.de"},
    {name = "Peter N Robinson", email="peter.robinson@bih-charite.de"},
    {name = "Sylvia Thun", email="sylvia.thun@bih-charite.de"},
]
description = "An ontology-based rare disease common data model (RD-CDM) harmonising international registries, HL7 FHIR, and GA4GH Phenopackets."
readme = "README.md"
requires-python = ">=3.10, <3.13"
keywords = [
    "Rare Diseases",
    "Interoperability",
    "Ontology",
    "GA4GH Phenopackets",
    "HL7 FHIR",
    "Inernational Patient Summary",
    "Genomics Reporting"
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Machine Learning"
]
dependencies = [
    "numpy",
    "jsonschema",
    "oaklib", 
    "linkml",
    "poetry",
    "ruamel.yaml",
    "requests (>=2.32.4,<3.0.0)",
    "requests-cache (>=1.2.1,<2.0.0)",
    "requests"
]
version = "2.0.0"

[project.optional-dependencies]
test = ["pytest>=7.0.0,<8.0.0"]
docs = ["sphinx>=7.0.0", "sphinx-rtd-theme>=1.3.0", "sphinx-copybutton>=0.5.0"]

[project.urls]
homepage = "https://github.com/BIH-CEI/rd-cdm"
repository = "https://github.com/BIH-CEI/rd-cdm"
documentation = "https://rd-cdm.readthedocs.io/en/latest/"
bugtracker = "https://github.com/BIH-CEI/rd-cdm/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry]
name = "rd-cdm"
version = "2.0.0"
packages = [
    { include = "rd_cdm", from = "src" }
]
include = [
  "src/rd_cdm/schema/rd_cdm.yaml",
  "src/rd_cdm/instances/v2_0_0/*.yaml"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.31.0"
linkml-runtime = "^1.9.4"
oaklib = "^0.6.23"

[tool.poetry.plugins."oaklib.plugins"]
rdcdm = "oakx_rdcdm.rdcdm_implementation:RdCdmValidator"
[tool.poetry.scripts]
rd-cdm-validate = "rd_cdm.validation:main"